[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"
utils = { git = "https://github.com/rudyhb/utils.git" }
regex = "1.11.1"
anyhow = "1.0.93"
once_cell = "1.20.2"
bitflags = "2.7.0"
colored = "3.0.0"
itertools = "0.14.0"
strum = "0.26.3"
strum_macros = "0.26.4"